; ModuleID = '/home/carl/AnghaBench/mpv/options/extr_m_config.c_config_destroy.c'
source_filename = "/home/carl/AnghaBench/mpv/options/extr_m_config.c_config_destroy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.m_config = type { %struct.TYPE_2__*, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i64, i32, %struct.TYPE_2__* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @config_destroy to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @config_destroy(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.m_config*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.m_config*
  store %struct.m_config* %5, %struct.m_config** %3, align 8
  %6 = load %struct.m_config*, %struct.m_config** %3, align 8
  %7 = call i32 @m_config_restore_backups(%struct.m_config* %6)
  %8 = load %struct.m_config*, %struct.m_config** %3, align 8
  %9 = getelementptr inbounds %struct.m_config, %struct.m_config* %8, i32 0, i32 1
  %10 = load %struct.TYPE_2__*, %struct.TYPE_2__** %9, align 8
  %11 = call i32 @talloc_free(%struct.TYPE_2__* %10)
  %12 = load %struct.m_config*, %struct.m_config** %3, align 8
  %13 = getelementptr inbounds %struct.m_config, %struct.m_config* %12, i32 0, i32 0
  %14 = load %struct.TYPE_2__*, %struct.TYPE_2__** %13, align 8
  %15 = icmp ne %struct.TYPE_2__* %14, null
  br i1 %15, label %16, label %40

16:                                               ; preds = %1
  %17 = load %struct.m_config*, %struct.m_config** %3, align 8
  %18 = getelementptr inbounds %struct.m_config, %struct.m_config* %17, i32 0, i32 0
  %19 = load %struct.TYPE_2__*, %struct.TYPE_2__** %18, align 8
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 0
  %21 = load i64, i64* %20, align 8
  %22 = icmp eq i64 %21, 0
  %23 = zext i1 %22 to i32
  %24 = call i32 @assert(i32 %23)
  %25 = load %struct.m_config*, %struct.m_config** %3, align 8
  %26 = getelementptr inbounds %struct.m_config, %struct.m_config* %25, i32 0, i32 0
  %27 = load %struct.TYPE_2__*, %struct.TYPE_2__** %26, align 8
  %28 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %27, i32 0, i32 2
  %29 = load %struct.TYPE_2__*, %struct.TYPE_2__** %28, align 8
  %30 = call i32 @talloc_free(%struct.TYPE_2__* %29)
  %31 = load %struct.m_config*, %struct.m_config** %3, align 8
  %32 = getelementptr inbounds %struct.m_config, %struct.m_config* %31, i32 0, i32 0
  %33 = load %struct.TYPE_2__*, %struct.TYPE_2__** %32, align 8
  %34 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %33, i32 0, i32 1
  %35 = call i32 @pthread_mutex_destroy(i32* %34)
  %36 = load %struct.m_config*, %struct.m_config** %3, align 8
  %37 = getelementptr inbounds %struct.m_config, %struct.m_config* %36, i32 0, i32 0
  %38 = load %struct.TYPE_2__*, %struct.TYPE_2__** %37, align 8
  %39 = call i32 @talloc_free(%struct.TYPE_2__* %38)
  br label %40

40:                                               ; preds = %16, %1
  ret void
}

declare dso_local i32 @m_config_restore_backups(%struct.m_config*) #1

declare dso_local i32 @talloc_free(%struct.TYPE_2__*) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @pthread_mutex_destroy(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
